tests/failing/test25.tail
let v1:[int]2 = reshape{[int],[1,2]}([3,2],iotaV(5)) in
let v2:[int]2 = transp{[int],[2]}(v1) in
let v3:<int>2 = shape{[int],[2]}(v2) in
let v4:S(bool,1) = tt in
let v5:<bool>2 = [v4,ff] in
let v6:<int>1 = dropV{[int],[1]}(b2iV(v4),v3) in
let v7:<int>2 = shape{[int],[2]}(v1) in
let v8:<int>3 = catV{[int],[1,2]}(v6,v7) in
i2d(reduce{[int],[0]}(addi,0,v8))
